--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <h3>Instructions</h3>
         </br>
         <ol>
-            <li>You will be given a random number at the start of the game.
+            <li>You will be given a random number to get to.
                 <span>"Number To Get"</span></li>
             <li>There are four crystals below.</li>
             <ul>
@@ -25,11 +25,10 @@
                 <li id="red">Red</li>
                 <li id="orange">Orange</li>
             </ul>
-            <li>By clicking on a crystal, you will add a specific amount of points to your total score.</li>
+            <li>Each crystal has a hidden value that when clicked will add to your total score.</li>
             <li>You win the game by matching your total score to the random number.</li>
             <li>You lose the game if your total score goes above the random number.</li>
-            <li>The value of each crystal is hidden from you until you click on it.</li>
-            <li>Each time when the game starts, the game will change the values of each crystal.</li>
+            <li>Each time the game starts, the game will change the values of each crystal.</li>
         </ol>
     </div>
     <div class="numberToMatch">
