--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <li>Each crystal has a hidden value that when clicked will add to your total score.</li>
             <li>You win the game by matching your total score to the random number.</li>
             <li>You lose the game if your total score goes above the random number.</li>
-            <li>Each time the game starts, the game will change the values of each crystal.</li>
+            <li>Each time the game starts, the values of each crystal will change.</li>
         </ol>
     </div>
     <div class="numberToMatch">
